; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_batchscan.c_BTM_BleSetStorageConfig.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_batchscan.c_BTM_BleSetStorageConfig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64, i32, i32*, i32*, i32* }
%struct.TYPE_5__ = type { i64 }
%struct.TYPE_6__ = type { i32 (...)* }

@BTM_NO_RESOURCES = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [45 x i8] c" BTM_BleSetStorageConfig: %d, %d, %d, %d, %d\00", align 1
@ble_batchscan_cb = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8
@BTM_ILLEGAL_VALUE = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [39 x i8] c"Controller does not support batch scan\00", align 1
@BTM_ERR_PROCESSING = common dso_local global i64 0, align 8
@BTM_BLE_ADV_SCAN_FULL_MAX = common dso_local global i64 0, align 8
@BTM_BLE_ADV_SCAN_TRUNC_MAX = common dso_local global i64 0, align 8
@BTM_BLE_ADV_SCAN_THR_MAX = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [34 x i8] c"Illegal set storage config params\00", align 1
@BTM_BLE_SCAN_INVALID_STATE = common dso_local global i64 0, align 8
@BTM_BLE_SCAN_DISABLED_STATE = common dso_local global i64 0, align 8
@BTM_BLE_SCAN_DISABLE_CALLED = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@BTM_CMD_STARTED = common dso_local global i64 0, align 8
@BTM_BLE_SCAN_ENABLE_CALLED = common dso_local global i64 0, align 8
@BTM_BLE_BATCH_SCAN_ENB_DISAB_CUST_FEATURE = common dso_local global i32 0, align 4
@BTM_BLE_BATCH_SCAN_SET_STORAGE_PARAM = common dso_local global i32 0, align 4
@BTM_BLE_BATCH_SCAN_CFG_STRG_EVT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @BTM_BleSetStorageConfig(i64 %0, i64 %1, i64 %2, i32* %3, i32* %4, i32* %5, i32 %6) #0 {
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i64, align 8
  %17 = alloca %struct.TYPE_5__, align 8
  store i64 %0, i64* %9, align 8
  store i64 %1, i64* %10, align 8
  store i64 %2, i64* %11, align 8
  store i32* %3, i32** %12, align 8
  store i32* %4, i32** %13, align 8
  store i32* %5, i32** %14, align 8
  store i32 %6, i32* %15, align 4
  %18 = load i64, i64* @BTM_NO_RESOURCES, align 8
  store i64 %18, i64* %16, align 8
  %19 = load i64, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @ble_batchscan_cb, i32 0, i32 0), align 8
  %20 = load i32, i32* %15, align 4
  %21 = load i64, i64* %9, align 8
  %22 = load i64, i64* %10, align 8
  %23 = load i64, i64* %11, align 8
  %24 = call i32 @BTM_TRACE_EVENT(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i64 %19, i32 %20, i64 %21, i64 %22, i64 %23)
  %25 = call %struct.TYPE_6__* (...) @controller_get_interface()
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = load i32 (...)*, i32 (...)** %26, align 8
  %28 = call i32 (...) %27()
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %32, label %30

30:                                               ; preds = %7
  %31 = load i64, i64* @BTM_ILLEGAL_VALUE, align 8
  store i64 %31, i64* %8, align 8
  br label %102

32:                                               ; preds = %7
  %33 = call i32 @BTM_BleGetVendorCapabilities(%struct.TYPE_5__* %17)
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = icmp eq i64 0, %35
  br i1 %36, label %37, label %40

37:                                               ; preds = %32
  %38 = call i32 @BTM_TRACE_ERROR(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0))
  %39 = load i64, i64* @BTM_ERR_PROCESSING, align 8
  store i64 %39, i64* %8, align 8
  br label %102

40:                                               ; preds = %32
  %41 = load i32*, i32** %12, align 8
  store i32* %41, i32** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @ble_batchscan_cb, i32 0, i32 4), align 8
  %42 = load i32*, i32** %13, align 8
  store i32* %42, i32** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @ble_batchscan_cb, i32 0, i32 3), align 8
  %43 = load i32*, i32** %14, align 8
  store i32* %43, i32** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @ble_batchscan_cb, i32 0, i32 2), align 8
  %44 = load i32, i32* %15, align 4
  store i32 %44, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @ble_batchscan_cb, i32 0, i32 1), align 8
  %45 = load i64, i64* %9, align 8
  %46 = load i64, i64* @BTM_BLE_ADV_SCAN_FULL_MAX, align 8
  %47 = icmp sgt i64 %45, %46
  br i1 %47, label %56, label %48

48:                                               ; preds = %40
  %49 = load i64, i64* %10, align 8
  %50 = load i64, i64* @BTM_BLE_ADV_SCAN_TRUNC_MAX, align 8
  %51 = icmp sgt i64 %49, %50
  br i1 %51, label %56, label %52

52:                                               ; preds = %48
  %53 = load i64, i64* %11, align 8
  %54 = load i64, i64* @BTM_BLE_ADV_SCAN_THR_MAX, align 8
  %55 = icmp sgt i64 %53, %54
  br i1 %55, label %56, label %59

56:                                               ; preds = %52, %48, %40
  %57 = call i32 @BTM_TRACE_ERROR(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0))
  %58 = load i64, i64* @BTM_ILLEGAL_VALUE, align 8
  store i64 %58, i64* %8, align 8
  br label %102

59:                                               ; preds = %52
  %60 = load i64, i64* @BTM_BLE_SCAN_INVALID_STATE, align 8
  %61 = load i64, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @ble_batchscan_cb, i32 0, i32 0), align 8
  %62 = icmp eq i64 %60, %61
  br i1 %62, label %71, label %63

63:                                               ; preds = %59
  %64 = load i64, i64* @BTM_BLE_SCAN_DISABLED_STATE, align 8
  %65 = load i64, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @ble_batchscan_cb, i32 0, i32 0), align 8
  %66 = icmp eq i64 %64, %65
  br i1 %66, label %71, label %67

67:                                               ; preds = %63
  %68 = load i64, i64* @BTM_BLE_SCAN_DISABLE_CALLED, align 8
  %69 = load i64, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @ble_batchscan_cb, i32 0, i32 0), align 8
  %70 = icmp eq i64 %68, %69
  br i1 %70, label %71, label %85

71:                                               ; preds = %67, %63, %59
  %72 = load i32, i32* @TRUE, align 4
  %73 = call i64 @btm_ble_enable_disable_batchscan(i32 %72)
  store i64 %73, i64* %16, align 8
  %74 = load i64, i64* @BTM_CMD_STARTED, align 8
  %75 = load i64, i64* %16, align 8
  %76 = icmp ne i64 %74, %75
  br i1 %76, label %77, label %79

77:                                               ; preds = %71
  %78 = load i64, i64* %16, align 8
  store i64 %78, i64* %8, align 8
  br label %102

79:                                               ; preds = %71
  %80 = load i64, i64* @BTM_BLE_SCAN_ENABLE_CALLED, align 8
  store i64 %80, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @ble_batchscan_cb, i32 0, i32 0), align 8
  %81 = load i32, i32* @BTM_BLE_BATCH_SCAN_ENB_DISAB_CUST_FEATURE, align 4
  %82 = load i64, i64* @BTM_BLE_SCAN_ENABLE_CALLED, align 8
  %83 = load i32, i32* %15, align 4
  %84 = call i32 @btm_ble_batchscan_enq_op_q(i32 %81, i64 %82, i32 0, i32 %83)
  br label %85

85:                                               ; preds = %79, %67
  %86 = load i64, i64* %9, align 8
  %87 = load i64, i64* %10, align 8
  %88 = load i64, i64* %11, align 8
  %89 = call i64 @btm_ble_set_storage_config(i64 %86, i64 %87, i64 %88)
  store i64 %89, i64* %16, align 8
  %90 = load i64, i64* @BTM_CMD_STARTED, align 8
  %91 = load i64, i64* %16, align 8
  %92 = icmp ne i64 %90, %91
  br i1 %92, label %93, label %95

93:                                               ; preds = %85
  %94 = load i64, i64* %16, align 8
  store i64 %94, i64* %8, align 8
  br label %102

95:                                               ; preds = %85
  %96 = load i32, i32* @BTM_BLE_BATCH_SCAN_SET_STORAGE_PARAM, align 4
  %97 = load i64, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @ble_batchscan_cb, i32 0, i32 0), align 8
  %98 = load i32, i32* @BTM_BLE_BATCH_SCAN_CFG_STRG_EVT, align 4
  %99 = load i32, i32* %15, align 4
  %100 = call i32 @btm_ble_batchscan_enq_op_q(i32 %96, i64 %97, i32 %98, i32 %99)
  %101 = load i64, i64* %16, align 8
  store i64 %101, i64* %8, align 8
  br label %102

102:                                              ; preds = %95, %93, %77, %56, %37, %30
  %103 = load i64, i64* %8, align 8
  ret i64 %103
}

declare dso_local i32 @BTM_TRACE_EVENT(i8*, i64, i32, i64, i64, i64) #1

declare dso_local %struct.TYPE_6__* @controller_get_interface(...) #1

declare dso_local i32 @BTM_BleGetVendorCapabilities(%struct.TYPE_5__*) #1

declare dso_local i32 @BTM_TRACE_ERROR(i8*) #1

declare dso_local i64 @btm_ble_enable_disable_batchscan(i32) #1

declare dso_local i32 @btm_ble_batchscan_enq_op_q(i32, i64, i32, i32) #1

declare dso_local i64 @btm_ble_set_storage_config(i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
